@@ -1,3 +1,11 @@
+Thu Jun 28 01:44:02 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/man_db.conf.in (SECTION): Remove guarantee that ties will be
+	  broken in lexical order within sections. It's rather complicated
+	  to be sure of that right now, and it should rarely matter.
+
+	* docs/ToDo: lexgrog learnt how to detect preprocessors ages ago.
+
 Thu Jun 28 01:02:32 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/manp.c (gripe_stat_file): Downgrade the warning if a manpath
